Update TokenStream.java