@@ -1,44 +1,34 @@
 package com.scanner.project;
 
-import java.io.BufferedReader;
-import java.io.FileReader;
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.io.*;
+import java.util.*;
+import java.util.regex.*;
 
 public class TokenStream {
-
     private final List<Token> tokens = new ArrayList<>();
     private int index = 0;
 
-    private static final Set<String> KEYWORDS = new HashSet<>(Arrays.asList(
-            "bool", "else", "if", "integer", "main", "while"
-    ));
+    private static final Set<String> KEYWORDS = Set.of(
+        "bool","else","if","integer","main","while"
+    );
+    private static final Set<String> OPERATORS2 = Set.of(
+        "||","&&","!=","==",">=","<=",":="
+    );
+    private static final Set<String> OPERATORS1 = Set.of(
+        "!","<",">","/","*","-","+"
+    );
+    private static final Set<String> SEPARATORS = Set.of(
+        "(",")","{","}",";",","
+    );
+    private static final Set<String> OTHER = Set.of(
+        "=","@","&","|",":","\\","[","]"
+    );
 
-    private static final Set<String> TWO_CHAR_OPERATORS = new HashSet<>(Arrays.asList(
-            "||", "&&", "!=", "==", ">=", "<=", ":="
-    ));
-
-    private static final Set<String> SINGLE_CHAR_OPERATORS = new HashSet<>(Arrays.asList(
-            "!", "<", ">", "/", "*", "-", "+"
-    ));
-
-    private static final Set<String> SEPARATORS = new HashSet<>(Arrays.asList(
-            "(", ")", "{", "}", ";", ","
-    ));
-
-    private static final Set<String> OTHER_CHARS = new HashSet<>(Arrays.asList(
-            "=", "@", "&", "|", ":", "\\", "[", "]"
-    ));
-
-    public TokenStream(String filePath) {
-        try (BufferedReader br = new BufferedReader(new FileReader(filePath))) {
+    public TokenStream(String path) {
+        try (BufferedReader br = new BufferedReader(new FileReader(path))) {
             String line;
             while ((line = br.readLine()) != null) {
-                tokenizeLine(line);
+                scan(line);
             }
         } catch (IOException e) {
             Token t = new Token();
@@ -48,117 +38,49 @@ public class TokenStream {
         }
     }
 
-    private void tokenizeLine(String line) {
-        int len = line.length();
-        int i = 0;
+    private void scan(String line) {
+        int i=0, n=line.length();
+        while (i<n) {
+            if (Character.isWhitespace(line.charAt(i))) { i++; continue; }
 
-        while (i < len) {
-            char c = line.charAt(i);
+            if (line.charAt(i)=='/' && i+1<n && line.charAt(i+1)=='/') break;
 
-            if (Character.isWhitespace(c)) {
-                i++;
-                continue;
-            }
-
-
-            if (c == '/' && i + 1 < len && line.charAt(i + 1) == '/') {
-                break;
-            }
-
-            if (i + 1 < len) {
-                String two = line.substring(i, i + 2);
-                if (TWO_CHAR_OPERATORS.contains(two)) {
-                    addToken(two, "Operator");
-                    i += 2;
-                    continue;
+            if (i+1<n) {
+                String s2=line.substring(i,i+2);
+                if (OPERATORS2.contains(s2)) {
+                    add(s2,"Operator"); i+=2; continue;
                 }
             }
 
-            String s = String.valueOf(c);
+            String s=String.valueOf(line.charAt(i));
+            if (OPERATORS1.contains(s)) { add(s,"Operator"); i++; continue; }
+            if (SEPARATORS.contains(s)) { add(s,"Separator"); i++; continue; }
+            if (OTHER.contains(s))      { add(s,"Other"); i++; continue; }
 
-            if (SINGLE_CHAR_OPERATORS.contains(s)) {
-                addToken(s, "Operator");
-                i++;
-                continue;
+            if (Character.isLetterOrDigit(line.charAt(i)) || line.charAt(i)=='.') {
+                int j=i;
+                while (j<n && (Character.isLetterOrDigit(line.charAt(j))||line.charAt(j)=='.')) j++;
+                String w=line.substring(i,j);
+                String T=classify(w);
+                add(w,T);
+                i=j; continue;
             }
 
-            if (SEPARATORS.contains(s)) {
-                addToken(s, "Separator");
-                i++;
-                continue;
-            }
-
-            if (OTHER_CHARS.contains(s)) {
-                addToken(s, "Other");
-                i++;
-                continue;
-            }
-
-            if (Character.isLetterOrDigit(c) || c == '.') {
-                int j = i;
-                while (j < len) {
-                    char cj = line.charAt(j);
-                    if (Character.isLetterOrDigit(cj) || cj == '.') {
-                        j++;
-                    } else {
-                        break;
-                    }
-                }
-                String word = line.substring(i, j);
-                addToken(word, classifyWord(word));
-                i = j;
-                continue;
-            }
-
-            addToken(s, "Other");
-            i++;
+            add(s,"Other"); i++;
         }
     }
 
-    private void addToken(String value, String type) {
-        Token t = new Token();
-        t.setValue(value);
-        t.setType(type);
-        tokens.add(t);
-    }
-
-    private String classifyWord(String word) {
-        if (KEYWORDS.contains(word)) {
-            return "Keyword";
-        }
-
-        if ("True".equals(word) || "False".equals(word)) {
-            return "Literal";
-        }
-
-        if (word.matches("\\d+")) {
-            return "Literal";
-        }
-
-        if (Character.isLetter(word.charAt(0))) {
-            boolean allAlnum = true;
-            for (int i = 1; i < word.length(); i++) {
-                char c = word.charAt(i);
-                if (!Character.isLetterOrDigit(c)) {
-                    allAlnum = false;
-                    break;
-                }
-            }
-            if (allAlnum) {
-                return "Identifier";
-            }
-        }
-
+    private String classify(String w) {
+        if (KEYWORDS.contains(w)) return "Keyword";
+        if ("True".equals(w) || "False".equals(w)) return "Literal";
+        if (w.matches("\\d+")) return "Literal";
+        if (w.length()>0 && Character.isLetter(w.charAt(0)) && w.substring(1).chars().allMatch(Character::isLetterOrDigit))
+            return "Identifier";
         return "Other";
     }
 
-    public Token nextToken() {
-        if (index >= tokens.size()) {
-            Token t = new Token();
-            t.setValue("");
-            t.setType("Other");
-            return t;
-        }
-        return tokens.get(index++);
-    }
+    private void add(String v,String t){ Token x=new Token(); x.setValue(v); x.setType(t); tokens.add(x); }
+
+    public Token nextToken(){ return index<tokens.size()?tokens.get(index++):other(""); }
+    private Token other(String v){ Token t=new Token(); t.setValue(v); t.setType("Other"); return t; }
 }
